# op-succinct

./: .dockerignore  .env.example  .env.server.example  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  CYCLE_COUNT.md  Cargo.toml  Dockerfile  Dockerfile.op_proposer  Dockerfile.server  OP_PROPOSER.md  README.md  RELEASE.md  TUTORIAL.md  book.toml  buf.gen.yaml  buf.yaml  collect-data.sh  docker-compose-altda.yml  docker-compose-celestia.yml  docker-compose-eigenda.yml  docker-compose.yml  entrypoint.sh  foundry.toml  initialize_env.sh  justfile  local.session.sql  mise.toml  op-network.yaml  op_proposer.sh  patch.diff  prometheus.yml  proposer.toml  rust-toolchain  rust-toolchain.toml  test_utils.sh
aggregation/: Cargo.toml
aggregation-client/: Cargo.toml
aggregation-client/src/: main.rs
aggregation/src/: main.rs
analysis/: data_analysis.py  pyproject.toml
audits/: audit-forkdiff.yaml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
bindings/src/codegen/: access_manager.rs  anchor_state_registry.rs  dispute_game_factory.rs  erc1967_proxy.rs  i_anchor_state_registry.rs  i_dispute_game.rs  i_dispute_game_factory.rs  i_fault_dispute_game.rs  mock_optimism_portal2.rs  mock_permissioned_dispute_game.rs  mod.rs  op_succinct_dispute_game.rs  op_succinct_fault_dispute_game.rs  op_succinct_l2_output_oracle.rs  sp1_mock_verifier.rs  superchain_config.rs
book/: SUMMARY.md  architecture.md  book.toml  cost-estimator.md  faq.md  introduction.md  migration.md  repository-structure.md  (+1 more)
challenger/fp/: Cargo.toml
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  main.rs
common/: Cargo.toml
common/src/: boot.rs  data_fetcher.rs  executor.rs  lib.rs
common/src/oracle/: mod.rs
common/src/precompiles/: ecrecover.rs  mod.rs
cost-estimator/: Cargo.toml
cost-estimator/src/: cli.rs  main.rs
crates/client/: Cargo.toml
crates/client-utils/: Cargo.toml
crates/client-utils/src/: boot.rs  driver.rs  lib.rs  types.rs
crates/client-utils/src/oracle/: mod.rs
crates/client-utils/src/precompiles/: ecrecover.rs  mod.rs
crates/client/src/: boot.rs  lib.rs
crates/client/src/oracle/: mod.rs
crates/host/: Cargo.toml
crates/host/src/: fetcher.rs  helpers.rs  lib.rs
fault_proof/: Cargo.toml  Dockerfile  Dockerfile.challenger  Dockerfile.proposer  README.md  docker-compose.yml  docker-entrypoint.sh
fault_proof/grafana/alerts/: proposer-alert.json
fault_proof/grafana/dashboards/: proposer-dashboard.json
fault_proof/grafana/provisioning/dashboards/: dashboard.yml  op-succinct-dashboard.json
fault_proof/prometheus/: prometheus.yml
fault_proof/src/: config.rs  contract.rs  lib.rs  metrics.rs  prometheus.rs  proposer.rs  sol.rs  utils.rs
fault_proof/tests/: e2e.rs  integration.rs
host-server/: Cargo.toml
host-server/src/: errors.rs  main.rs
programs/range/: Cargo.toml
programs/range/altda/: Cargo.toml
programs/range/altda/src/: main.rs
programs/range/celestia/: Cargo.toml
programs/range/celestia/src/: main.rs
programs/range/eigenda/: Cargo.toml
programs/range/eigenda/src/: main.rs
programs/range/ethereum/: Cargo.toml
programs/range/ethereum/src/: main.rs
programs/range/src/: main.rs
programs/range/utils/: Cargo.toml
programs/range/utils/src/: lib.rs
programs/range/validium/: Cargo.toml
programs/range/validium/src/: main.rs
proposer/fp/: Cargo.toml
proposer/fp/src/: config.rs  main.rs
proposer/rust/: Cargo.toml
proposer/rust/src/: config.rs  driver.rs  main.rs  metrics.rs  proposer.rs  rpc.rs  types.rs
proposer/succinct/: Cargo.toml  Dockerfile  Dockerfile.server  build.rs
proposer/succinct/.sqlx/: query-05fef7f2eb15cfc2f5fc7aa252b5f3563adecb312ef43c74de5528591d258b94.json  query-26770ab3e8d9d2de146d5669b9373214e5c5a1a814417502534ddbd63453e845.json  query-3ca183807df2740555540f0a355690449aef8285d06ead2c2999b71960fa950a.json  query-580fae9466b18363e4996c7f423ab398d490e6d885af9a51d65a5a75a9a0c329.json  query-674ab0c4642ef5f14331d43b979a687cc57cea3726dd9991910445482b3f8238.json  query-c2834c709ee5fd724282b5686c14bf4b0ed9f6b864e1e8c9d50444c7dd09149c.json
proposer/succinct/migrations/: 01_init.sql  02_add_chain_id_and_contract.sql
proposer/succinct/src/: contract.rs  db.rs  env.rs  eth_listener.rs  lib.rs  logger.rs  op_listener.rs  programs.rs  prom.rs  proof_requester.rs  proposer.rs  types.rs  utils.rs
proposer/succinct/src/db/: mod.rs  types.rs
scripts/prove/: Cargo.toml  base_cycle_stats.json  build.rs
scripts/prove/src/: lib.rs
scripts/prove/tests/: cycle_count_diff.rs  multi.rs
scripts/prove/tests/common/: mod.rs
utils/altda/client/: Cargo.toml
utils/altda/client/src/: data_source.rs  executor.rs  hint.rs  lib.rs
utils/altda/host/: Cargo.toml
utils/altda/host/src/: cfg.rs  handler.rs  host.rs  lib.rs  witness_generator.rs
utils/eigenda/host/: Cargo.toml
utils/eigenda/host/src/: host.rs  lib.rs  witness_generator.rs
utils/eigenda/host/tests/: witness_generator.rs
utils/eigenda/registry/: Cargo.toml
utils/eigenda/registry/src/: lib.rs
utils/ethereum/client/: Cargo.toml
utils/ethereum/client/src/: executor.rs  lib.rs
utils/host/: Cargo.toml
utils/host/src/: block_range.rs  contract.rs  fetcher.rs  helpers.rs  host.rs  l1_selection.rs  lib.rs  logger.rs  metrics.rs  network.rs  proof.rs  rollup_config.rs  rpc_retry.rs  stats.rs  witness_cache.rs  witnessgen.rs
utils/host/src/hosts/: celestia.rs  default.rs  eigenda.rs  mod.rs
utils/host/src/single/: cli.rs  eth.rs  fetcher.rs  local_kv.rs  mod.rs  orchestrator.rs
utils/host/src/witness_generation/: celestia_da_client.rs  client.rs  eigenda_witness_gen.rs  eth_da_client.rs  mod.rs  online_blob_store.rs  preimage_witness_collector.rs  traits.rs  witness_generator.rs
utils/proof/: Cargo.toml
utils/proof/src/: lib.rs
utils/proposer/: Cargo.toml
utils/proposer/src/: signer.rs
utils/signer/: Cargo.toml
utils/signer-gcp/: Cargo.toml
utils/signer-gcp/src/: lib.rs  signer.rs
utils/signer/src/: lib.rs
zkvm-host/: Cargo.toml  build.rs
zkvm-host/src/: cli.rs  fetcher.rs  helpers.rs  lib.rs  main.rs  utils.rs
(+570 files in other folders)
