[workspace]
members = [
    "aggregation-client",
    "crates/*",
    "native-host",
    "validity-client",
    "zkvm-client",
    "zkvm-host",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["zachobront"]
homepage = ""
repository = ""

[workspace.dependencies]

# kona
kona-common = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-common-proc = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-preimage = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes", features = [
    "rkyv",
] }
kona-primitives = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-mpt = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-derive = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes", default-features = false }
kona-executor = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-client = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }
kona-host = { git = "https://github.com/moongate-forks/kona", branch = "ratan/index-data-bytes" }

# general
anyhow = { version = "1.0.86", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
lru = "0.12.3"
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"

# serialization
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = "0.7.44"
hex = "0.4.3"

# local
client-utils = { path = "crates/client-utils" }
host-utils = { path = "crates/host-utils" }
zkvm-client = { path = "zkvm-client" }
zkvm-host = { path = "zkvm-host" }

# ethereum
# Note: There are issues with alloy versioning, ensure that the alloy versions are EXACTLY the same
# as those in Kona.
alloy = { version = "=0.2.0", default-features = false, features = ["full"] }
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-rlp = { version = "0.3.5", default-features = false }
alloy-consensus = { version = "=0.2.0", default-features = false }
alloy-sol-types = { version = "0.7.6" }
alloy-eips = { version = "=0.2.0", default-features = false }
revm = { git = "https://github.com/bluealloy/revm", tag = "v37", version = "10.0.0", default-features = false }
op-alloy-consensus = { version = "=0.1.4", default-features = false }
num-format = "0.4.4"
bincode = "1.3.3"

sp1-lib = { version = "1.1.1", features = ["verify"] }
sp1-zkvm = { version = "1.1.1", features = ["verify"] }
# sp1-sdk = "1.1.1"
# sp1-helper = "1.1.1"
# Note: Using `dev` branch temporarily for the cycle-tracker-report features.
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", branch = "dev" }


# sp1
[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8", package = "sha2" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
