[workspace]
members = [
    "client-programs/*",
    "crates/*",
    "native-host",
    "zkvm-host",
    "op-succinct-proposer",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["zachobront"]
homepage = ""
repository = ""

[workspace.dependencies]

# kona
# kona-common = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-common-proc = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-preimage = { git = "https://github.com/ethereum-optimism/kona", branch = "main", features = [
#     "rkyv",
# ] }
# kona-primitives = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-mpt = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-derive = { git = "https://github.com/ethereum-optimism/kona", branch = "main", default-features = false }
# kona-executor = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-client = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# kona-host = { git = "https://github.com/ethereum-optimism/kona", branch = "main" }
# Note: CachingOracle needs to be exposed publicly in Kona. Make a PR to re-expose it again.
kona-common = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-common-proc = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-preimage = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65", features = [
    "rkyv",
] }
kona-primitives = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-mpt = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-derive = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65", default-features = false }
kona-executor = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-client = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }
kona-host = { git = "https://github.com/ethereum-optimism/kona", rev = "e4a032c1325687221d01674f0de0fd757e516e65" }

# general
anyhow = { version = "1.0.86", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
lru = "0.12.3"
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"
num-format = "0.4.4"
futures = "0.3.30"
serde_cbor = "0.11.2"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"


# serialization
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = "0.7.44"
hex = "0.4.3"

# local
client-utils = { path = "crates/client-utils" }
host-utils = { path = "crates/host-utils" }
zkvm-host = { path = "zkvm-host" }
op-succinct-proposer = { path = "op-succinct-proposer" }

# ethereum
alloy = { version = "0.2", default-features = false, features = ["full"] }
alloy-primitives = { version = "0.7.6", default-features = false }
alloy-rlp = { version = "0.3.5", default-features = false }
alloy-eips = { version = "0.2", default-features = false }
revm = { git = "https://github.com/bluealloy/revm", version = "13.0", default-features = false }
bincode = "1.3.3"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["limit"] }
alloy-consensus = { version = "0.2", default-features = false }
alloy-sol-types = { version = "0.7.6" }
op-alloy-consensus = { version = "0.1.4", default-features = false }

# sp1
sp1-lib = { git = "https://github.com/succinctlabs/sp1.git", branch = "john/faster-runtime", features = [
    "verify",
] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "john/faster-runtime", features = [
    "verify",
] }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "john/faster-runtime" }
sp1-build = { git = "https://github.com/succinctlabs/sp1.git", branch = "john/faster-runtime" }

# kzg
kzg-rs = { git = "https://github.com/succinctlabs/kzg-rs", branch = "bhargav/sp1-bls-patch" }

# sp1
[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

[patch.crates-io]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
# sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.6.0" }
# alloy-primitives = { git = "https://github.com/sp1-patches/alloy-core", branch = "patch-v0.7.7" }
# alloy-primitives = { path = "../alloy-core/crates/primitives" }
# alloy-sol-macro-expander = { git = "https://github.com/sp1-patches/alloy-core", branch = "patch-v0.7.7" }
# secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
