[package]
name = "aggregation-client"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
sha2 = "0.10.8"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.5-testnet", features = [
    "verify",
] }
client-utils.workspace = true
