[package]
name = "op-succinct-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# local
op-succinct-validity.workspace = true
op-succinct-host-utils.workspace = true

# alloy
alloy-primitives.workspace = true

# general
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
comfy-table = "7.2.1"
dotenv.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tokio.workspace = true
