[package]
name = "zkvm-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
kona-client.workspace = true
kona-primitives.workspace = true
kona-host = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde = { workspace = true, features = ["derive"] }
# Note: Using ethers instead of alloy because kona-host depends on alloy-primitives, which causes
# dependency conflicts when resolving alloy-primitives from alloy crate instead of standalone alloy-primitives.
# Once kona-host moves to using the new alloy, we can use alloy instead of ethers.
ethers = { version = "2.0", optional = true }
num-format = "0.4.4"
dotenv = "0.15.0"
anyhow.workspace = true

[features]
default = ["io"]
io = ["dep:ethers", "dep:kona-host"]
