[package]
name = "zkvm-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
kona-client.workspace = true
kona-primitives.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
kona-executor.workspace = true
kona-mpt.workspace = true
revm.workspace = true
sp1-lib.workspace = true