[package]
name = "zkvm-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]

# workspace (general)
anyhow.workspace = true
async-trait.workspace = true
rkyv.workspace = true
sha2.workspace = true
serde.workspace = true

# workspace (ethereum)
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

# workspace (kona)
kona-client.workspace = true
kona-primitives.workspace = true
kona-preimage.workspace = true
