[package]
name = "host-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum = "0.7.4"

# workspace
tokio = { workspace = true }
clap = { workspace = true }
cargo_metadata = { workspace = true }
serde = { workspace = true }

# kona
kona-host = { workspace = true }

# local
host-utils.workspace = true
zkvm-host.workspace = true

# sp1
sp1-sdk = { workspace = true }
anyhow.workspace = true
dotenv.workspace = true
num-format.workspace = true
revm.workspace = true
client-utils.workspace = true
