[package]
name = "zkvm-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

# workspace
hex.workspace = true
rkyv.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
clap.workspace = true

# kona
kona-host.workspace = true

# local
zkvm-common = { workspace = true, features = ["io"] }
native-host.workspace = true

# sp1
sp1-sdk.workspace = true
sp1-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
num-format = "0.4.4"
dotenv = "0.15.0"

[build-dependencies]
sp1-helper.workspace = true
