[package]
name = "zkvm-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "l2_block"
path = "bin/l2_block.rs"

[dependencies]

# workspace
hex.workspace = true
rkyv.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

# kona
kona-host = { workspace = true }

# local
client-utils.workspace = true
host-utils.workspace = true

# sp1
sp1-sdk = { workspace = true }
anyhow.workspace = true
num-format = "0.4.4"
dotenv = "0.15.0"

[build-dependencies]
sp1-helper = { workspace = true }
