[package]
name = "zkvm-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "l2_block"
path = "bin/l2_block.rs"

[dependencies]

# workspace
tokio = { workspace = true }
clap = { workspace = true }

# kona
kona-host = { workspace = true }

# local
host-utils.workspace = true

# sp1
sp1-sdk = { workspace = true }
anyhow.workspace = true
dotenv = "0.15.0"

[build-dependencies]
sp1-helper = { workspace = true }
