[package]
name = "client-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
# workspace (general)
cfg-if.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# workspace (ethereum)
op-alloy-consensus.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

# workspace (kona)
kona-primitives.workspace = true
kona-executor.workspace = true
kona-client.workspace = true
kona-preimage.workspace = true
kona-derive.workspace = true
kona-mpt.workspace = true

alloy-sol-types.workspace = true
serde.workspace = true
rkyv.workspace = true
sha2.workspace = true
