[package]
name = "client-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
# workspace (general)
anyhow.workspace = true
async-trait.workspace = true

# workspace (ethereum)
alloy-primitives.workspace = true
revm.workspace = true

# workspace (kona)
kona-primitives.workspace = true
kona-executor.workspace = true
kona-client.workspace = true
kona-preimage.workspace = true
kona-mpt.workspace = true

alloy-sol-types.workspace = true
serde.workspace = true
rkyv.workspace = true
sha2.workspace = true

# sp1
sp1-zkvm.workspace = true
