[package]
name = "client-utils"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
kona-client.workspace = true
kona-primitives.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde.workspace = true
rkyv.workspace = true
anyhow.workspace = true
async-trait.workspace = true
kona-preimage.workspace = true
sha2.workspace = true
alloc.workspace = true
