[package]
name = "range"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cfg-if.workspace = true
serde_json.workspace = true
log.workspace = true
tracing.workspace = true
anyhow.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-primitives = { workspace = true }

# op alloy
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

# maili
maili-protocol.workspace = true
maili-genesis.workspace = true

# kona
kona-proof.workspace = true
kona-driver.workspace = true
kona-executor.workspace = true
kona-preimage.workspace = true

# sp1
sp1-zkvm.workspace = true

# op-succinct
op-succinct-client-utils.workspace = true

# `tracing-subscriber` feature dependencies
tracing-subscriber = { workspace = true, optional = true }
thiserror.workspace = true

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
