[package]
name = "op-fp-proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3" 