[package]
name = "op-succinct-proposer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "server"
path = "bin/server.rs"

[dependencies]

# workspace
tokio = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
csv = { workspace = true }

# local
op-succinct-host-utils.workspace = true

# sp1
sp1-sdk = { workspace = true }
sp1-stark = { workspace = true }
sp1-core-executor = { workspace = true }
p3-baby-bear = { workspace = true }
p3-fri = { workspace = true }
p3-field = { workspace = true }

anyhow.workspace = true
dotenv.workspace = true
op-succinct-client-utils.workspace = true
serde = { workspace = true }
serde_json.workspace = true

# server
axum = "0.7.4"
bincode.workspace = true
log.workspace = true
base64.workspace = true
tower-http.workspace = true
serde_repr = "0.1.19"
hashbrown = "0.14.5"

[build-dependencies]
op-succinct-build-utils.workspace = true
