[package]
name = "op-succinct-proposer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "validity"
path = "bin/validity.rs"

[dependencies]

# workspace
tokio.workspace = true
alloy-primitives.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# local
op-succinct-host-utils.workspace = true

# sp1
sp1-sdk.workspace = true

# alloy
alloy-eips.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-signer-local.workspace = true
op-alloy-network.workspace = true

anyhow.workspace = true
dotenv.workspace = true
op-succinct-client-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
# server
axum = "0.7.4"
bincode.workspace = true
log.workspace = true
base64.workspace = true
tower-http.workspace = true
serde_repr = "0.1.19"
sqlx = { version = "0.8.3", features = ["postgres", "chrono", "bigdecimal", "runtime-tokio"] }
chrono = "0.4.39"
futures-util = "0.3.31"
clap.workspace = true

[build-dependencies]
op-succinct-build-utils.workspace = true
