[package]
name = "op-succinct-prove"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "multi"
path = "bin/multi.rs"

[[bin]]
name = "multi-and-agg"
path = "bin/multi-and-agg.rs"

[[bin]]
name = "agg"
path = "bin/agg.rs"

[dependencies]

# workspace
tokio.workspace = true
tokio-stream = "0.1.17"
futures.workspace = true
clap.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
dotenv.workspace = true
csv.workspace = true
tracing.workspace = true
cfg-if.workspace = true

# local
op-succinct-host-utils.workspace = true
op-succinct-client-utils.workspace = true
op-succinct-proof-utils.workspace = true
op-succinct-scripts = { path = "../utils" }
op-succinct-elfs.workspace = true
op-succinct-fp.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-macro.workspace = true
alloy-transport-http.workspace = true
alloy-provider.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-network.workspace = true

# sp1
sp1-sdk.workspace = true

rustls = { version = "0.23.23", features = ["ring"] }
bincode.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde_json.workspace = true
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
op-succinct-build-utils.workspace = true

[features]
default = ["ethereum"]
celestia = ["op-succinct-proof-utils/celestia"]
eigenda = ["op-succinct-proof-utils/eigenda"]
ethereum = ["op-succinct-proof-utils/ethereum"]
